--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description"
-        content="Twickd is the best place to experience next generation software. Join our amazing community and start sharing and finding amazing iOS Tweaks and Themes for your Perfect Jailbreak setup!">
+        content="Chào mừng! hãy đóng góp kỷ niệm của bạn ngay thôi nào..">
 
     <!-- Favicons -->
     <link rel="icon" type="image/png" href="./images/favicon.png/96" sizes="96x96">
@@ -32,11 +32,11 @@
 
     <!-- Meta -->
     <meta property="og:url" content=".">
-    <meta property="og:site_name" content="Twickd">
-    <meta property="og:title" content="Twickd — Unleash the power">
+    <meta property="og:site_name" content="Hey Guys!">
+    <meta property="og:title" content="Xin chào!">
     <meta property="og:image" content="https://avatars.io/twitter/TwickdRepo">
     <meta property="og:description"
-        content="Twickd is the best place to experience next generation software. Join our amazing community and start sharing and finding amazing iOS Tweaks and Themes for your Perfect Jailbreak setup!">
+        content="Chào mừng! hãy đóng góp kỷ niệm của bạn ngay thôi nào..">
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@TwickdRepo" />
 
